# readseek

./: .gitignore  Cargo.toml  LICENSE-Florence-2  LICENSE-LGPL-2.1  Makefile  README.md  build.rs  bunfig.toml  index.ts  package-lock.json  package.json  research-inference-speedup.md  research.md  vitest.config.ts
.github/workflows/: ci.yml  publish-npm.yml  release.yml
autoload/: readseek.vim
autoload/readseek/: buffer.vim  config.vim  install.vim  job.vim  quickfix.vim
benches/: vision.rs  vision.txt
doc/: readseek.txt  tags
man/man1/: readseek.1
npm/darwin-arm64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-x64/: package.json
plugin/: readseek.vim
prompts/: def.md  edit.md  find.md  grep.md  hover.md  ls.md  read.md  refs.md  rename.md  sg.md  write.md
scripts/: publish.sh  release.sh  update-npm-integrity.mjs
src/: binding.rs  cache.rs  cli.rs  coerce-obvious-int.ts  context-hygiene.ts  def.rs  def.ts  diff-data.ts  edit-classify.ts  edit-diff.ts  edit-output.ts  edit-syntax-validate.ts  edit.ts  file-map.ts  flags.rs  fs-error.ts  grep-budget.ts  grep-output.ts  grep-symbol-scope.ts  grep.ts  hash.rs  hashline.ts  hover.ts  ignore.rs  lang.rs  main.rs  map-cache.ts  navigation.rs  output.rs  paths.rs  pending-diff-preview.ts  persistent-map-cache.ts  read-local-bundle.ts  read-output.ts  read.ts  readseek-client.ts  readseek-command.ts  readseek-params.ts  readseek-repo.ts  readseek-settings.ts  (+21 more)
src/cli/: run.rs
src/engine/: binding.rs  def.rs  document.rs  document_store.rs  document_view.rs  florence.rs  hash.rs  image.rs  lang.rs  mod.rs  model.rs  output.rs  paths.rs  pdf.rs  quantized_blip.rs  quantized_trocr.rs  refs.rs  rename.rs  repo.rs  resolver.rs  search.rs  source.rs  symbols.rs  target.rs  tome.rs  vision.rs  vision_cache.rs  yolo.rs
src/engine/binding/: cpp.rs  csharp.rs  go.rs  java.rs  mod.rs  python.rs  rust.rs  swift.rs  typescript.rs  vimscript.rs
src/engine/qwen/: gguf.rs  kernels.rs  mod.rs  text.rs  tokenizer.rs  vision.rs
src/readseek/: mapper.ts  parser-errors.ts  parser-loader.ts  symbol-lookup.ts  types.ts
test/: readseek.vim
tests/: data.rs  data.txt  def.test.ts  grep-summary.test.ts  hashline.test.ts  index.test.ts  read-anchors.test.ts  readseek-client.test.ts  readseek-settings.test.ts  readseek.rs  refs.test.ts  rename_plan.rs  sandbox.py  tool-prompt-metadata.test.ts
