[package]
authors = ["Jarkko Sakkinen <jarkko.sakkinen@iki.fi>"]
description = "structural source reader with stable line hashes"
edition = "2024"
license = "LGPL-2.1-or-later"
homepage = "https://github.com/jarkkojs/readseek"
repository = "https://github.com/jarkkojs/readseek"
name = "readseek"
readme = "README.md"
rust-version = "1.85"
version = "0.2.11"

[dependencies]
anyhow = "1.0"
arborium-meson = "2.18"
argh = "0.1.13"
blake3 = "1.8"
dirs = "6"
env_logger = "0.11"
git2 = "0.20"
infer = "0.19"
log = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
syntect = { version = "5.2", default-features = false, features = ["default-syntaxes", "parsing", "regex-fancy"] }
tree-sitter = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-css = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-containerfile = "0.8"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-html = "0.23"
tree-sitter-json = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-xml = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-just = "0.2"
tree-sitter-javascript = "0.25"
tree-sitter-make = "1.1"
tree-sitter-nix = "0.3"
tree-sitter-python = "0.25"
tree-sitter-php = "0.24"
tree-sitter-puppet = "1.3"
tree-sitter-ruby = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-swift = "0.7.3"
tree-sitter-md-025 = { version = "0.5.6", features = ["parser"] }
tree-sitter-kconfig = "1.3.0"
codebook-tree-sitter-typst = "0.12.1"
codebook-tree-sitter-latex = "0.6.1"
tree-sitter-asm = "0.24.0"
tree-sitter-riscv = "0.3.1"
tree-sitter-gdscript = "6.1.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-vim = "0.4.0"
tree-sitter-zig = "1.1"
ts-parser-perl = "1.1"
[dev-dependencies]
duct = "1"
